Minor grammar error fixes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Hence, we cooked up the Pi Index (affectionately called the Peace Index) to meas
 </div>
 
 <div class="col-md-5">
-<b><em>The first year version of me will be proud of me now.</em></b>
+<b><em>The first year version of me will be proud of myself now.</em></b>
 </div>
 <div class="col-md-2"></div>
 <div class="col-md-4">
@@ -91,7 +91,7 @@ Hence, we cooked up the Pi Index (affectionately called the Peace Index) to meas
 </div>
 
 <div class="col-md-5">
-<b><em>I am usually in a positive . Even if I was in depression, I have overcome it.</em></b>
+<b><em>I am usually in a positive mood and even if I was in depression, I have been able to overcome it well.</em></b>
 </div>
 <div class="col-md-2"></div>
 <div class="col-md-4">
