--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
 
 </head>
 <body class="all">
+	<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <div class="ning">
 </div>
 <div class="container">
@@ -814,6 +822,10 @@ $("#entabody").empty();
 <li>Our campus is still not accommodative of its gender diversity. The clear disparity in the mental satisfaction levels among our LGBTQ students indicates that we have a long way to go to be a liberal open campus.</li>
 <li>What we inferred was that Satisfaction and Happiness are loosely related, but are still very independent of each other. The most satisfied and the happiest categories weren't always the same.</li></ul>
 The study left us with many questions and thoughts. Is a happier life a 'better' life? Why do we want to be happy? <br>If ignorance is a bliss and happiness is only a function of perception, what is the material incentive in life to work for? <br>Do achievements make us happy or do happier people achieve stuff? <br><br>There probably is no answer and that is the beauty of life. Life is not an equation to be solved, it is a canvas to be painted. <br> We wish you take with you pointers from The Happiness Project to mould your life in a way that makes the years you spend at IIT worth it. <br>Ciao.<br><br>The Scholars' Avenue<br>
+<br>
+<br>
+Like our work? Give <b>The Happiness Project</b> a thumbs up!
+<div class="fb-like" data-href="http://thescholarsavenue.github.io/Happiness/" data-width="30" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 </div>
 
 
