--- a/index.html
+++ b/index.html
@@ -824,10 +824,11 @@ $("#entabody").empty();
 The study left us with many questions and thoughts. Is a happier life a 'better' life? Why do we want to be happy? <br>If ignorance is a bliss and happiness is only a function of perception, what is the material incentive in life to work for? <br>Do achievements make us happy or do happier people achieve stuff? <br><br>There probably is no answer and that is the beauty of life. Life is not an equation to be solved, it is a canvas to be painted. <br> We wish you take with you pointers from The Happiness Project to mould your life in a way that makes the years you spend at IIT worth it. <br>Ciao.<br><br>The Scholars' Avenue<br>
 <br>
 <br>
-Like our work? Give <b>The Happiness Project</b> a thumbs up!
+Like our work? Give <b>The Happiness Project</b> a thumbs up!<br><br>
 <div class="fb-like" data-href="http://thescholarsavenue.github.io/Happiness/" data-width="30" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 </div>
-
+<div class="height:100px;width=100%"></div>
+<hr>
 
 
 
