--- a/index.html
+++ b/index.html
@@ -826,10 +826,12 @@ The study left us with many questions and thoughts. Is a happier life a 'better'
 <br>
 
 <div class="fb-like" data-href="http://thescholarsavenue.github.io/Happiness/" data-width="30" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
-</div>
 <br>Like our work? Give <b>The Happiness Project</b> a thumbs up!
-<div style="height:100px;width=100%"></div>
+</div>
+
+<div style="height:40px;width=100%"></div>
 <hr>
+<span style="text-align:center;font-size:0.8em;color:#bbb">Created By Ashris With <strike>Love</strike> Code.</span>
 </div>
 </body>
 
