--- a/index.html
+++ b/index.html
@@ -829,9 +829,9 @@ The study left us with many questions and thoughts. Is a happier life a 'better'
 <br>Like our work? Give <b>The Happiness Project</b> a thumbs up!
 </div>
 
-<div style="height:40px;width=100%"></div>
-<hr>
-<span style="text-align:center;font-size:0.8em;color:#bbb">Created By Ashris With <strike>Love</strike> Code.</span>
+<div style="height:40px;width=100%"><span style="text-align:center;font-size:0.8em;color:#bbb">Created By Ashris With <strike>Love</strike> Code.</span></div>
+<hr style="margin-bottom:30px">
+
 </div>
 </body>
 
