--- a/index.html
+++ b/index.html
@@ -830,8 +830,8 @@ The study left us with many questions and thoughts. Is a happier life a 'better'
 </div>
 
 <div style="height:40px;width=100%"></div>
-<hr style="margin-bottom:30px">
-<div class="col-md-12" style="clear:both;text-align:center"><span style="text-align:center;font-size:0.8em;color:#bbb">Created By Ashris With <strike>Love</strike> Code.</span></div>
+<hr>
+<div class="col-md-12" style="clear:both;text-align:center"><span style="text-align:center;font-size:0.8em;color:#bbb;margin-bottom:30px">Created By Ashris With <strike>Love</strike> Code.</span></div>
 </div>
 </body>
 
