--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@ The study left us with many questions and thoughts. Is a happier life a 'better'
 
 <div style="height:40px;width=100%"></div>
 <hr>
-<div class="col-md-12" style="clear:both;text-align:center"><span style="text-align:center;font-size:0.8em;color:#bbb;margin-bottom:30px">Created By Ashris With <strike>Love</strike> Code.</span></div>
+<div class="col-md-12" style="clear:both;text-align:center;margin-bottom:50px"><span style="text-align:center;font-size:0.8em;color:#bbb">Created By Ashris With <strike>Love</strike> Code.</span></div>
 </div>
 </body>
 
