--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="col-md-1"></div>
 <div class="col-md-6 uparright" style="float:right">
 <div class="introhead"><p style="font-family: 'Roboto', serif;font-weight:normal;font-style: italic;font-size:1.3em">
-    <br>Happiness is not the absence of problems, it is the ability to deal with them.<br>Steve Maraboli</p><br><p>On August 2015, we invited you to participate in the <a href="https://goo.gl/LxOtsu">KGP Happiness Estimator Survey.</a></p> <p>The study explores corelations of happiness with parameters such as CGPA, Relationships, Societies, Hall of Residence, Gender and Year of Study statistically.</p><p>We tried to understand with a greater insight the patterns of stress and depression in the campus and explore ways in which we stay happy. So, what are the ingredients to a happy student life?<p>We are excited to share the results with you. </p> Here's some <a href="https://www.youtube.com/watch?v=lbjZPFBD6JU" target="_blank">nice music</a> to listen to while you browse through the results.<br>
+    <br>Happiness is not the absence of problems, it is the ability to deal with them.<br>Steve Maraboli</p><br><p>On August 2015, we invited you to participate in the <a href="https://goo.gl/LxOtsu">KGP Happiness Estimator Survey.</a></p> <p>The study explores corelations of happiness with parameters such as CGPA, Relationships, Societies, Hall of Residence, Gender and Year of Study statistically.</p><p>We tried to understand with a greater insight the multiple facets of Happiness in the campus. So, what are the ingredients to a happy student life?<p>We are excited to share the results with you. </p> Here's some <a href="https://www.youtube.com/watch?v=lbjZPFBD6JU" target="_blank">nice music</a> to listen to while you browse through the results.<br>
 
 </div>
 </div>
@@ -63,6 +63,7 @@
 </div>
 
 <div class="maincontent col-md-12">
+<h6>Disclaimer: The Scholars' Avenue owns all proprietary rights to all the information and inferences presented in this work. Individuals need to seek formal permission from The Scholars' Avenue if they wish to use survey output, partially or fully, for any purpose, personal or professional. This work may not be duplicated or distributed without The Scholars' Avenue's permission. In case of any disputes, The Scholars' Avenue's decision will be final.</h6>
 <h1 class="titles">Instruction Manual</h1>
 <h2 style="text-align:center;margin-bottom:25px">The only boring, preachy part of this page that we pester you to read.</h2>
 
