--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </div>
 
 <div class="maincontent col-md-12">
-<h5 style="margin-top:50px">Disclaimer: The Scholars' Avenue owns all proprietary rights to all the information and inferences presented in this work. Individuals need to seek formal permission from The Scholars' Avenue if they wish to use survey output, partially or fully, for any purpose, personal or professional. This work may not be duplicated or distributed without The Scholars' Avenue's permission. In case of any disputes, The Scholars' Avenue's decision will be final.</h5>
+<h5 style="margin-top:50px">Disclaimer: The Scholars' Avenue owns all proprietary rights to all the information and inferences presented in this work. Individuals need to seek formal permission from The Scholars' Avenue if they wish to use this survey output, partially or fully, for any purpose, personal or professional. This work may not be duplicated or distributed without The Scholars' Avenue's permission. In case of any disputes, The Scholars' Avenue's decision will be final.</h5>
 <h1 class="titles">Instruction Manual</h1>
 <h2 style="text-align:center;margin-bottom:25px">The only boring, preachy part of this page that we pester you to read.</h2>
 
