Minor spelling errors

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <h2 style="text-align:center;margin-bottom:25px">The only boring, preachy part of this page that we pester you to read.</h2>
 
 <div class="contentp"><h4>Word of Caution</h4><ul><li>When data is tampered using analysis, outliers are removed and order is enforced through averaging patterns that are inherently chaotic. Sure, there are ways to be precise and accurate, but it comes at the cost of simplicity. We have tried to prioritize simplicity over rigorous statistics.</li>
-<li>Please don't get confused between causation and corelation. One may very rightly observe that people who live long have more birthdays but may wrongly infer that birthdays, hence are good for one's health and longetivity.</li><li>In the context of our study, if you notice say, high CGPA implies high happiness values, the inference could either be 'High CGPA scorers are happier' or 'Happier people achieve high CGPA scores'. We advice you to ponder over both the possibilities as the results are open to interpreations. </li>
+<li>Please don't get confused between causation and corelation. One may very rightly observe that people who live long have more birthdays but may wrongly infer that birthdays, hence are good for one's health and longetivity.</li><li>In the context of our study, if you notice say, high CGPA implies high happiness values, the inference could either be 'High CGPA scorers are happier' or 'Happier people achieve high CGPA scores'. We advise you to ponder over both the possibilities as the results are open to interpretation. </li>
 <li>Feel free to report errors, demand clarifications and suggest edits.
 </ul>
 <h4>The <div style="display:inline; font-family:Times;font-weight:800;font-size:30px">&#960;</div> Index</h4>
