--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <h2 style="text-align:center;margin-bottom:25px">The only boring, preachy part of this page that we pester you to read.</h2>
 
 <div class="contentp"><h4>Word of Caution</h4><ul><li>When data is tampered using analysis, outliers are removed and order is enforced through averaging patterns that are inherently chaotic. Sure, there are ways to be precise and accurate, but it comes at the cost of simplicity. We have tried to prioritize simplicity over rigorous statistics.</li>
-<li>Please don't get confused between causation and corelation. One may very rightly observe that people who live long have more birthdays but may wrongly infer that birthdays, hence are good for one's health and longetivity.</li><li>In the context of our study, if you notice say, high CGPA implies high happiness values, the inference could either be 'High CGPA scorers are happier' or 'Happier people achieve high CGPA scores'. We advise you to ponder over both the possibilities as the results are open to interpretation. </li>
+<li>Please don't get confused between causation and corelation. One may very rightly observe that people who live long have more birthdays but may wrongly infer that birthdays, hence are good for one's health and longevity.</li><li>In the context of our study, if you notice say, high CGPA implies high happiness values, the inference could either be 'High CGPA scorers are happier' or 'Happier people achieve high CGPA scores'. We advise you to ponder over both the possibilities as the results are open to interpretation. </li>
 <li>Feel free to report errors, demand clarifications and suggest edits.
 </ul>
 <h4>The <div style="display:inline; font-family:Times;font-weight:800;font-size:30px">&#960;</div> Index</h4>
@@ -193,7 +193,7 @@ Hence, we cooked up the Pi Index (affectionately called the Peace Index) to meas
  </div>
  <div class="col-md-12" id="pipercentile" style="float:left;width:100%;height:40px;text-align:center;font-weight:bold;font-size:1.1em"></div>
 <div class="col-md-12" style="float:left;text-align:center">
-The Pi Index ranges from 0 to 10 and is an aproximate estimate of your happiness. Higher the Pi index, higher is the probability of you being a happy person holistically. The participants in the survey weren't told that these particular questions would be ingredients of the Happiness Formula. For the computed Pi Index to be of significance, please ensure that your answers are indeed true.
+The Pi Index ranges from 0 to 10 and is an approximate estimate of your happiness. Higher the Pi index, higher is the probability of you being a happy person holistically. The participants in the survey weren't told that these particular questions would be ingredients of the Happiness Formula. For the computed Pi Index to be of significance, please ensure that your answers are indeed true.
 
 
 </div>
@@ -206,7 +206,7 @@ The Pi Index ranges from 0 to 10 and is an aproximate estimate of your happiness
 
 <li>It is ensured that at least 10% of every demographics is represented in our sample set for the analysis to hold significance. For example, if the strength of ARP is 140 students, at least 14 entries from ARP are analyzed. Having said that, we acknowledge that the results of the survey may not be the best representative of the overall population of the campus. Whenever a statement such as 'X% of the students think...' is made, it implies X% of the 710 respondents and not the entire IIT campus.</li>
 
-<li>Considering the previous point, all demographics unadequately represented in the filtered sample set are not part of their domain specific topic results. These include Department of Chemistry and all non-UG Halls. Their entries have not been included in Department specific and Hall specific topics.</li>
+<li>Considering the previous point, all demographics inadequately represented in the filtered sample set are not part of their domain specific topic results. These include Department of Chemistry and all non-UG Halls. Their entries have not been included in Department specific and Hall specific topics.</li>
 
 <li>Humans err. In case you want to suggest edits, please feel free to drop a mail at thescholarsavenue@gmail.com</li>
 </ul>
@@ -418,7 +418,7 @@ $("#kool").empty();
    onmouseout="this.innerHTML='Atthi';">Atthi</div>
 <div class="labella" onmouseover="this.innerHTML='9<=CG<10';"
    onmouseout="this.innerHTML='Nehli';">Nehli</div>
-   <br>Values indicate perentage of students from each subgroup.
+   <br>Values indicate percentage of students from each subgroup.
    </div>
 
 
@@ -482,7 +482,7 @@ $("#kool").empty();
 <div class="catdescr col-md-12">
 <ul><li>61% of the campus is involved in no society.</li>
 <li>Students involved in no societies lie almost in the center of the overall distribution of satisfaction levels.</li> 
-<li>To the question <b><em>Do societies help in making friends?</em></b>, 69% students said YES, 29% said that there is NO CORELATION and 2% students said that Societies make people LONELIER.</li></ul>
+<li>To the question <b><em>Do societies help in making friends?</em></b>, 69% students said YES, 29% said that there is NO CORRELATION and 2% students said that Societies make people LONELIER.</li></ul>
 </div>
 <div class="col-md-12" style="text-align:center;vertical-align:middle">
 <div class="catind">Happiness Index Profile</div>
@@ -596,7 +596,7 @@ $("#kool").empty();
 </div>
 <div class="catdescr col-md-12">
 <ul>
-<li>Friendship Level is the only indicator other than CGPA that strongly corelates with the Happiness Index.</li><li>Students with more number of close friends and those who believe their friends will stay with them even after IIT have the highest happiness levels in all aspects.</li>
+<li>Friendship Level is the only indicator other than CGPA that strongly correlates with the Happiness Index.</li><li>Students with more number of close friends and those who believe their friends will stay with them even after IIT have the highest happiness levels in all aspects.</li>
 </div>
 <div class="col-md-12" style="text-align:center;vertical-align:middle">
 <div class="catind">Happiness Index Profile</div>
@@ -632,7 +632,7 @@ $("#kool").empty();
 <li>11% students said their health had gone worse.</li>
 </ul>
 </li>
-<li>Question: <b>How strongly do you agree with 'I am not as happy as I was in my first year'?</b> 0 implying Neutral, -100 being Strongly Disagree and +100 being Strongly Agree; the average score for <ul><li>No Addicition: -5</li><li>Occasional Weed Users: -8</li><li>Frequent Weed Users: +11</li><li>Occasional Cigarette Smokers: +6</li><li>Frequent Cigarette Smokers: +4</li><li>Occasional Alcohol Consumers: -3</li><li>Frequent Alcohol Consumers:-6</li></ul></li>
+<li>Question: <b>How strongly do you agree with 'I am not as happy as I was in my first year'?</b> 0 implying Neutral, -100 being Strongly Disagree and +100 being Strongly Agree; the average score for <ul><li>No Addiction: -5</li><li>Occasional Weed Users: -8</li><li>Frequent Weed Users: +11</li><li>Occasional Cigarette Smokers: +6</li><li>Frequent Cigarette Smokers: +4</li><li>Occasional Alcohol Consumers: -3</li><li>Frequent Alcohol Consumers:-6</li></ul></li>
 </ul>
 
 </div>
@@ -820,7 +820,7 @@ $("#entabody").empty();
 <li>The number of students experiencing Depression is alarming. While it is partly because of dissatisfaction from Academics, the students reporting highest levels of depression also claimed that they felt they had very few friends and that they wouldn't stay with them for life.</li>
 <li>Unexpectedly, societies have very less control on one's happiness. Students in societies are not any more happier than students not in societies.</li>
 <li>North Indians report highest satisfaction among all regional demographics. Similarly, Heterosexual Females bag the highest satisfaction levels in almost all satisfaction parameters. </li>
-<li>Our campus is still not accommodative of its gender diversity. The clear disparity in the mental satisfaction levels among our LGBTQ students indicates that we have a long way to go to be a liberal open campus.</li>
+<li>Our campus is still not accommodating of its gender diversity. The clear disparity in the mental satisfaction levels among our LGBTQ students indicates that we have a long way to go to be a liberal open campus.</li>
 <li>What we inferred was that Satisfaction and Happiness are loosely related, but are still very independent of each other. The most satisfied and the happiest categories weren't always the same.</li></ul>
 The study left us with many questions and thoughts. Is a happier life a 'better' life? Why do we want to be happy? <br>If ignorance is a bliss and happiness is only a function of perception, what is the material incentive in life to work for? <br>Do achievements make us happy or do happier people achieve stuff? <br><br>There probably is no answer and that is the beauty of life. Life is not an equation to be solved, it is a canvas to be painted. <br> We wish you take with you pointers from The Happiness Project to mould your life in a way that makes the years you spend at IIT worth it. <br>Ciao.<br><br>The Scholars' Avenue<br>
 <br>
